--- a/ww/css/style.css
+++ b/ww/css/style.css
@@ -33,5 +33,15 @@ body{
 
 
 .pres{
-	padding-bottom: 100px;
+	margin-top: -200px;
+}
+
+
+.loginhere{
+	text-align: center;
+	
+}
+
+p{
+	color: orange;
 }
